// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component cart_abandonment_modal experiment candidate matches the snapshot 1`] = `
<div>
  <gl-modal-stub
    arialabel=""
    dismisslabel="Close"
    modalclass=""
    modalid="subscription-modal"
    size="sm"
    titletag="h4"
  >
    

  We understand. Maybe you have some questions for our sales team, or maybe you'd like to try some of the paid features first. What would you like to do?

  
  </gl-modal-stub>
   
  <div>
    <checkout-stub />
     
    <confirm-order-stub
      class="gl-display-none gl-lg-display-block!"
      data-testid="confirm-order-desktop"
    />
     
    <order-summary-stub />
     
    <confirm-order-stub
      class="gl-display-block gl-lg-display-none!"
      data-testid="confirm-order-mobile"
    />
  </div>
</div>
`;

exports[`App component cart_abandonment_modal experiment control matches the snapshot 1`] = `
<div>
  <!---->
   
  <div>
    <checkout-stub />
     
    <confirm-order-stub
      class="gl-display-none gl-lg-display-block!"
      data-testid="confirm-order-desktop"
    />
     
    <order-summary-stub />
     
    <confirm-order-stub
      class="gl-display-block gl-lg-display-none!"
      data-testid="confirm-order-mobile"
    />
  </div>
</div>
`;
